@@ -1,3 +1,8 @@
+2000-05-07  Andy Heroff <aheroff@mediaone.net>
+
+	* common/log.c, common/log.h: Added log to console if use_console
+	  boolean is set by call to log_set_use_console_bool().
+
 2000-05-07  Dave Cole <dave@dccs.com.au>
 
 	* common/cost.c: Fixed cost of bridges.
